--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 LOCALE=fr_FR
-SENDER_ADDRESS=team@enpremiereligne.fr
+SENDER_ADDRESS=team@lisungi.org
 SITE_NAME="En première ligne"
-ANALYTICS_SERVER=a.enpremiereligne.fr
+ANALYTICS_SERVER=a.lisungi.org
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
