--- a/.github/workflows/test-build-publish.yaml
+++ b/.github/workflows/test-build-publish.yaml
@@ -42,7 +42,7 @@ jobs:
             - name: Build and publish production image
               uses: elgohr/Publish-Docker-Github-Action@master
               with:
-                  name: tgalopin/enpremiereligne.fr/website
+                  name: tgalopin/lisungi.org/website
                   username: ${{ secrets.GITHUB_DOCKER_USERNAME }}
                   password: ${{ secrets.GITHUB_DOCKER_PASSWORD }}
                   registry: docker.pkg.github.com
